# object-oriented-programming-lab2

./: CMakeLists.txt  README.md  main.cpp
include/: Hex.h
src/: Hex.cpp
tests/: tests.cpp
